# pandas-openscm

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  NOTES.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  requirements-docs-locked.txt  requirements-incl-optional-locked.txt  requirements-locked.txt  requirements-only-tests-locked.txt  requirements-only-tests-min-locked.txt  requirements-upstream-dev.txt
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  install-conda.yaml  install-pypi.yaml  release.yaml  test-upstream-latest.yaml
changelog/: 11.feature.md  12.feature.md  12.trivial.md  13.feature.md  14.fix.md  16.feature.md  17.feature.md  18.feature.md  19.breaking.md  19.feature.md  19.improvement.md  19.trivial.md  2.feature.md  21.trivial.md  22.trivial.md  23.feature.md  24.breaking.md  24.feature.md  24.improvement.md  24.trivial.md  28.improvement.md  3.trivial.md  30.docs.md  30.trivial.md  31.trivial.md  32.trivial.md  33.trivial.md  34.trivial.md  35.trivial.md  36.feature.md  37.feature.md  38.trivial.md  39.breaking.md  39.feature.md  4.trivial.md  40.improvement.md  6.trivial.md  7.feature.md  8.trivial.md  9.feature.md  (+2 more)
docs/: NAVIGATION.md  changelog.md  development.md  gen_doc_stubs.py  installation.md  pandas-accessors.md
docs/further-background/: dependency-pinning-and-testing.md  openscmdb-backend-speed-test_csv_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_in_memory_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_in_memory_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_netCDF_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_netCDF_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-tests.py  openscmdb-backend-speed.md
docs/further-background/openscmdb-backend-speed/: full-scm-output-category-index.txt  full-scm-output.txt  high-level-info.txt  magicc-full-output.txt  magicc-future-quantiles.txt  openscmdb-backend-speed-test_csv_magicc_full_output_False_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_False_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_False_30_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_True_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_True_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_full_output_True_30_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_False_1000_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_False_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_False_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_False_300_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_True_1000_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_True_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_True_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_csv_magicc_future_quantiles_True_300_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_False_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_False_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_False_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_False_30_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_True_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_True_10_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_True_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_full_output_True_30_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_future_quantiles_False_1000_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_future_quantiles_False_100_4_scenario-variable_5.json  openscmdb-backend-speed-test_feather_magicc_future_quantiles_False_1_4_scenario-variable_5.json  openscmdb-backend-speed-test_full_scm_output_csv_300000_401_False_8_-.json  (+131 more)
docs/how-to-guides/: basic-calculation.md  how-to-make-a-plume-plot.py  how-to-plot-foreground-and-background.py  how-to-use-openscmdb.py  run-code-in-a-notebook.py
docs/tutorials/: netCDF_magicc_full_output_True_30_4_scenario-variable_5.json  scratch-Copy1.py  scratch.py  unit-conversion.py
scripts/: add-locked-targets.py  changelog-to-release-template.py  print-conda-recipe-pins.py  test-install.py
src/pandas_openscm/: __init__.py  accessors.py  accessors_old.py  comparison.py  grouping.py  index_manipulation.py  indexing.py  io.py  pandas_accessors.py  pandas_helpers.py  parallelisation.py  plotting.py  testing.py  typing.py  unit_conversion.py
tests/: conftest.py
tests/integration/: test_comparison_integration.py  test_database.py  test_database_integration.py  test_database_integration_parallel.py  test_database_state.py  test_db_state.py  test_grouping_integration.py  test_index_manipulation_integration.py  test_indexing_integration.py  test_io.py  test_pandas_helpers.py  test_plotting_integration.py  test_to_category_index.py  test_to_db.py  test_unit_conversion.py
tests/unit/: test_indexing.py  test_operations.py  test_plotting.py
(+48 files in other folders)
