[project]
name = "pandas-openscm"
version = "0.5.2a1"
description = "Pandas accessors for OpenSCM-related functionality."
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-energy-college.org" },
]
license = { text = "3-Clause BSD License" }
requires-python = ">=3.9"
dependencies = [
    "attrs>=24.3.0",
    "numpy>=1.25.0",
    "pandas>=2.2.0",
]
readme = "README.md"
classifiers = [
    # Full list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://pandas-openscm.readthedocs.io"
Documentation = "https://pandas-openscm.readthedocs.io"
Changelog = "https://pandas-openscm.readthedocs.io/en/stable/changelog"
Repository = "https://github.com/openscm/pandas-openscm"
Issues = "https://github.com/openscm/pandas-openscm/issues"


[project.optional-dependencies]
db = [
    "filelock>=3.12.3",
]
db-full = [
    "netcdf4>=1.7.2",
    "pandas-openscm[db]",
    "pyarrow>=19.0.0",
    "xarray>=2024.7.0",
]
plots = [
    "matplotlib>=3.7.1",
]
progress = [
    "tqdm>=4.0.0",
]
full = [
    "pandas-openscm[db]",
    "pandas-openscm[plots]",
    "pandas-openscm[progress]",
]

[dependency-groups]
# The development dependencies are pinned
# to give a consistent starting point when using this template.
# They should be removed/updated/changed/loosened as suits your project.
# (As soon as you have a lock file, you can remove all of the implied dependencies.)
# (This is a workaround for the fact
# that we can't easily include the lock file in the copier template
# because of how locking works and the order of operations).
dev = [
    # Key dependencies
    # ----------------
    "gitpython>=3.1.44",
    "liccheck==0.9.2",
    "mypy==1.14.0",
    "pandas-indexing>=0.6.2",
    "pandas-stubs>=2.2.2.240807",
    "pint>=0.24.4",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "pip==24.3.1",
    "pre-commit==4.0.1",
    "pytest>=8.3.4",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "setuptools==75.6.0",
    "towncrier==24.8.0",
    "tabulate>=0.9.0",
    "types-tqdm>=4.67.0.20241221",
    "tomli>=2.2.1",
    "typer>=0.15.2",
]
docs = [
    # Key dependencies
    # ----------------
    "attrs==24.3.0",
    "mkdocs-autorefs==1.2.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.49",
    "mkdocs-section-index==0.3.9",
    "mkdocs==1.6.1",
    "mkdocstrings-python-accessors>=0.1.1",
    "mkdocstrings-python-xref==1.6.2",
    "mkdocstrings-python==1.13.0",
    "pymdown-extensions==10.13",
    "ruff==0.8.6",
    # Key dependencies for notebook_based_docs
    # ----------------------------------------
    "filelock>=3.16.1",
    "ipywidgets>=8.1.5",
    "jupyterlab==4.3.4",
    "jupytext==1.16.6",
    "mkdocs-jupyter==0.25.1",
    "openscm-units>=0.6.3",
    "pandas-indexing>=0.6.2",
    "pint>=0.24.4",
]
# For minimum test dependencies.
# These are used when running our minimum PyPI install tests.
tests-min = [
    # Key dependencies
    # ----------------
    "pytest==8.3.4",
    # Implied by the key dependencies above
    # -------------------------------------
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
]
# Full test dependencies.
tests-full = [
    "hypothesis>=6.125.3",
    # Key dependencies
    # ----------------
    "openscm-units>=0.6.3",
    "pandas-indexing>=0.6.2",
    "pint>=0.24.4",
    "pytest-cov>=6.0.0",
    "pytest-regressions>=2.7.0",
]
# Test dependencies
# (partly split because liccheck uses toml,
# which doesn't support inhomogeneous arrays).
tests = [
    {include-group = "tests-min"},
    {include-group = "tests-full"},
]
all-dev = [
    {include-group = "dev"},
    {include-group = "docs"},
    {include-group = "tests"},
]

[build-system]
requires = [
    "pdm-backend",
    "pdm-build-locked",
]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
locked = true
includes = [
    "src/pandas_openscm",
    "LICENCE",
]

[tool.coverage.run]
source = [
    "src",
]
branch = true

[tool.coverage.report]
fail_under = 90
skip_empty = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING",
    # Type overloading lines
    "@overload",
    "\\.\\.\\.",

]

[tool.mypy]
strict = true
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
follow_imports = "normal"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",  # treat whitespace sanely
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "superslow: marks tests as super slow i.e. >1 minute to run (select with '-m \"superslow\"')",
]

[tool.ruff]
src = [
    "src",
]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [
    "PD002",
]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",
    "S101",
    "PLR2004",
]
"docs/*" = [
    "D100",
    "E402",
    "S101",
]
"docs/how-to-guides/how-to-make-a-plume-plot.py" = [
    "E501",
]
"scripts/*" = [
    "S101",
]
"stubs/*" = [
    "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.towncrier]
package = "pandas_openscm"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## Pandas-OpenSCM {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openscm/pandas-openscm/pull/{issue})"
type = [
    { directory = "breaking", name = "⚠️ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "🗑️ Deprecations", showcontent = true },
    { directory = "feature", name = "🆕 Features", showcontent = true },
    { directory = "improvement", name = "🎉 Improvements", showcontent = true },
    { directory = "fix", name = "🐛 Bug Fixes", showcontent = true },
    { directory = "docs", name = "📚 Improved Documentation", showcontent = true },
    { directory = "trivial", name = "🔧 Trivial/Internal Changes", showcontent = false },
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "CC0",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "CMU License (MIT-CMU)",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation",
    "python software foundation license",
    "The Unlicense (Unlicense)",
    "zpl 2.1",
]
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]
